# Crux

./: README.md
crux-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  worker.py
crux-agent/app/: __init__.py  main.py  settings.py
crux-agent/app/api/: dependencies.py
crux-agent/app/api/routers/: jobs.py  solve.py
crux-agent/app/core/: __init__.py
crux-agent/app/core/agents/: base.py  evaluator.py  generator.py  professor.py  refiner.py  specialist.py
crux-agent/app/core/agents/prompts/: evaluate_prompt.py  generator_prompt.py  graduate_worker_prompt.py  professor_prompt.py  refiner_prompt.py
crux-agent/app/core/engine/: __init__.py  self_evolve.py
crux-agent/app/core/orchestrators/: __init__.py  basic.py  enhanced.py
crux-agent/app/core/providers/: __init__.py  base.py  factory.py  openai.py  openrouter.py
crux-agent/app/schemas/: __init__.py  request.py  response.py
crux-agent/app/utils/: logging.py
crux-agent/crux-mvp/: package.json  pnpm-lock.yaml  tailwind.config.ts
crux-agent/crux-mvp/app/: globals.css  layout.tsx  page.tsx
crux-agent/crux-mvp/app/dashboard/: page.tsx
crux-agent/crux-mvp/app/game/: page.tsx
crux-agent/crux-mvp/app/new-task/: page.tsx
crux-agent/crux-mvp/app/task/[id]/: page.tsx
crux-agent/crux-mvp/components/ui/: paper-collector-game.tsx  waiting-game.tsx
crux-agent/crux-mvp/hooks/: use-tasks.ts
crux-agent/problems/2024IMO/: IMO3.xml  IMO4.xml
crux-agent/tests/: __init__.py  test_api.py  test_dependencies.py
self-evolve/: ReadMe.md  __init__.py  config.py  pipeline.py
self-evolve/utils/: __init__.py  (+1 more)
self_evolve/: .env.example  .gitignore  __init__.py
(+47 files in other folders)
